src/stage1/routes/work-01/vs-dr-cloud-canary-10p.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-vs
spec:
  hosts:
   - service
  http:
  - route:
    - destination:
        host: service
        subset: orlando-service-1
      weight: 90
    - destination:
        host: service
        subset: orlando-service-2
      weight: 0
    - destination:
        host: service
        subset: cloud-service-1
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-dr
spec:
  host: service
  subsets:
  - name: orlando-service-1
    labels:
      cluster: orlando-service-1
  - name: orlando-service-2
    labels:
      cluster: orlando-service-2
  - name: cloud-service-1
    labels:
      cluster: cloud-service-1
