src/stage1/routes/work-01/vs-dr-orlando-1-100p.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-vs
spec:
  hosts:
   - service
  http:
  - route:
    - destination:
        host: service
        subset: orlando-service-1
      weight: 99
    - destination:
        host: service
        subset: orlando-service-2
      weight: 1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-dr
spec:
  host: service
  subsets:
  - name: orlando-service-1
    labels:
      cluster: orlando-service-1
  - name: orlando-service-2
    labels:
      cluster: orlando-service-2
